// Copyright 2020 IBM Corp.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package connectors;
option java_package = "io.fybrik";
option go_package = "fybrik.io/fybrik/pkg/connectors/protobuf";

import "dataset_details.proto";

message CatalogDatasetInfo {
    string dataset_id = 1;
    DatasetDetails details = 2;
}

