// Copyright 2020 IBM Corp.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package connectors;
option java_package = "io.fybrik";
option go_package = "fybrik.io/fybrik/pkg/connectors/protobuf";

import "data_catalog_request.proto";

import "data_catalog_response.proto";

import "register_asset_request.proto";

import "register_asset_response.proto";

service DataCatalogService {
	
	rpc GetDatasetInfo (CatalogDatasetRequest) returns (CatalogDatasetInfo) {}

	rpc RegisterDatasetInfo (RegisterAssetRequest) returns (RegisterAssetResponse) {}	

} 